--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EEEEEE"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".activity.LoginActivity">
@@ -12,116 +13,140 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="151dp">
+                android:layout_height="151dp"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="94dp"
-                    app:srcCompat="@android:drawable/ic_menu_camera"
                     android:id="@+id/camraIcon"
+                    android:layout_width="100dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
                     android:layout_marginTop="@dimen/activity_horizontal_margin"
-                   />
+                    android:background="@drawable/background_img"
+                    android:src="@drawable/camera" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.35">
+                android:orientation="vertical">
+
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    style="@style/Gotham_Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Enter Mosque Name"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutMosqueName"
                     android:layout_width="match_parent"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
                     android:layout_height="wrap_content">
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                        android:id="@+id/mosque_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:ems="10"
-                        android:id="@+id/masjidName"
-                        android:layout_weight="1"
-                        android:hint="Masjid Name" />
+                        android:minHeight="50dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    style="@style/Gotham_Medium"
                     android:layout_width="match_parent"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:layout_height="wrap_content"
+                    android:text="Enter Admin Name"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutAdminName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                        android:id="@+id/adminName"
+                        android:id="@+id/admin_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:ems="10"
-                        android:hint="Admin Name"
-                        android:inputType="textPersonName" />
+                        android:minHeight="50dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    style="@style/Gotham_Medium"
                     android:layout_width="match_parent"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Enter Mobile Number"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutMobileNumber"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                        android:id="@+id/mobile_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="phone"
-                        android:ems="10"
-                        android:id="@+id/adminMobile"
-                        android:layout_weight="1"
-                        android:hint="Admin Mobile"
-                        android:maxLength="10"
-                        android:phoneNumber="true" />
+                        android:minHeight="50dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
+
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    style="@style/Gotham_Medium"
                     android:layout_width="match_parent"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Enter Complete Address"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
                         android:id="@+id/address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="Full Address"
-                        android:inputType="textMultiLine" />
+                        android:minHeight="50dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:text="Submit"
+                    android:id="@+id/submit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/submit"
-                    android:textSize="16dp"
-                    android:background="@drawable/background"
-                    android:textColor="@color/white"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:elevation="0dp" />
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/background"
+                    android:elevation="0dp"
+                    android:text="Submit"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
 
             </LinearLayout>
         </LinearLayout>
