--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -107,6 +107,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="50dp"
+                        android:maxLength="10"
+                        android:inputType="number"
                         android:padding="10dp"
                         android:textSize="16sp" />
 
