--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -67,57 +67,6 @@
                     style="@style/Gotham_Medium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Enter Admin Name"
-                    android:layout_marginTop="10dp"
-                    android:textColor="#000"
-                    android:textSize="15sp" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/inputLayoutAdminName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                        android:id="@+id/admin_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="50dp"
-                        android:padding="10dp"
-                        android:textSize="16sp" />
-
-                </android.support.design.widget.TextInputLayout>
-
-
-                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                    style="@style/Gotham_Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Enter Mobile Number"
-                    android:textColor="#000"
-                    android:textSize="15sp" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/inputLayoutMobileNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                        android:id="@+id/mobile_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="50dp"
-                        android:maxLength="10"
-                        android:inputType="number"
-                        android:padding="10dp"
-                        android:textSize="16sp" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                    style="@style/Gotham_Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Enter Complete Address"
                     android:textColor="#000"
@@ -129,7 +78,7 @@
                     android:layout_height="wrap_content">
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                        android:id="@+id/address"
+                        android:id="@+id/mosque_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="50dp"
@@ -138,17 +87,28 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/submit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                <LinearLayout
+                    android:id="@+id/submitLayout"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/background"
-                    android:elevation="0dp"
-                    android:text="Submit"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
+                    android:background="@drawable/solid_blue"
+                    android:gravity="center">
+
+
+                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                        style="@style/Gotham_Book"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:id="@+id/clickCheck"
+                        android:text="Submit"
+                        android:textColor="#fff"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
