remove sign in page

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,6 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
@@ -217,6 +218,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/submit_otp_btn"
+            android:textColor="@color/white"
+            android:text="Submit"
             android:layout_marginTop="20dp"
             android:background="@drawable/background"/>
 
