--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -95,7 +95,7 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/solid_blue"
+                    android:background="@drawable/background"
                     android:gravity="center">
 
 
