--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,118 +1,38 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:id="@+id/coordinatorLayout"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.example.shadabazamfarooqui.mylocator.activity.LoginActivity">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
-    <ScrollView
-        android:id="@+id/login_form"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/email_login_form"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:src="@drawable/mosque_symbol"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+        <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+            android:id="@+id/sign_up"
+            style="@style/Gotham_Book"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="No account yet? Create one"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:padding="5dp"
-                    android:layout_height="wrap_content">
-
-                    <AutoCompleteTextView
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/prompt_email"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
+    </LinearLayout>
 
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_marginTop="10dp"
-               android:layout_height="wrap_content">
-
-
-               <android.support.design.widget.TextInputLayout
-                   android:layout_width="match_parent"
-                   android:padding="5dp"
-                   android:layout_height="wrap_content">
-                   <EditText
-                       android:id="@+id/password"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:hint="@string/prompt_password"
-                       android:imeActionId="@+id/login"
-                       android:imeActionLabel="@string/action_sign_in_short"
-                       android:imeOptions="actionUnspecified"
-                       android:inputType="textPassword"
-                       android:maxLines="1"
-                       android:singleLine="true" />
-
-               </android.support.design.widget.TextInputLayout>
-           </LinearLayout>
-
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:background="@drawable/background"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/white"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
-
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/skip"
-                android:layout_marginTop="20dp"
-                android:text="skip login >"
-                android:textSize="16dp"
-                android:gravity="center"
-                android:textColor="@color/black"
-                style="@style/Gotham_Book" />
-
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/sign_up"
-                android:layout_marginTop="20dp"
-                android:text="No account yet? Create one"
-                android:textSize="16dp"
-                android:gravity="center"
-                android:textColor="@color/black"
-                style="@style/Gotham_Book"
-                />
-
-        </LinearLayout>
-    </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
