--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -1,12 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/coordinatorLayout"
     android:layout_height="match_parent"
     android:background="#EEEEEE"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.SplashActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -56,8 +57,9 @@
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
                         android:id="@+id/mosque_name"
                         android:layout_width="match_parent"
+                        android:background="@drawable/bg_grey_stroke"
                         android:layout_height="wrap_content"
-                        android:minHeight="50dp"
+                        android:minHeight="40dp"
                         android:padding="10dp"
                         android:textSize="16sp" />
 
@@ -81,7 +83,8 @@
                         android:id="@+id/mosque_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:minHeight="50dp"
+                        android:background="@drawable/bg_grey_stroke"
+                        android:minHeight="40dp"
                         android:padding="10dp"
                         android:textSize="16sp" />
 
@@ -114,4 +117,4 @@
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
