--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".activity.SignUpActivity">
 
-    <!-- android:background="@android:color/transparent"-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,141 +15,149 @@
         android:visibility="visible">
 
         <LinearLayout
-            android:id="@+id/register_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:orientation="vertical"
-            android:visibility="visible">
+            android:orientation="vertical">
+            <!-- android:background="@android:color/transparent"-->
 
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                android:id="@+id/buzzTextView"
-                style="@style/Gotham_Medium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:textColor="#000"
-                android:textSize="15sp" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/inputLayoutName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_grey_stroke"
-                    android:minHeight="40dp"
-                    android:padding="10dp"
-                    android:textSize="16sp" />
-            </android.support.design.widget.TextInputLayout>
-
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                style="@style/Gotham_Medium"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Email (Optional)"
-                android:textColor="#000"
-                android:textSize="15sp" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/inputLayoutEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:background="@drawable/bg_grey_stroke"
-                    android:minHeight="40dp"
-                    android:padding="10dp"
-                    android:textSize="16sp" />
-            </android.support.design.widget.TextInputLayout>
-
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
-                android:id="@+id/textView2"
-                style="@style/Gotham_Medium"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Mobile Number"
-                android:textColor="#000"
-                android:textSize="15sp" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/inputLayoutMobile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-                    android:id="@+id/mobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="number"
-                    android:background="@drawable/bg_grey_stroke"
-                    android:maxLength="10"
-                    android:minHeight="40dp"
-                    android:padding="10dp"
-                    android:textSize="16sp" />
-            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
+                android:id="@+id/register_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:layout_margin="20dp"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-            <LinearLayout
-                android:id="@+id/submit"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/background"
-                android:gravity="center">
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    android:id="@+id/buzzTextView"
+                    style="@style/Gotham_Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name *"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                        android:id="@+id/name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_grey_stroke"
+                        android:minHeight="40dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
+                </android.support.design.widget.TextInputLayout>
 
                 <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
                     style="@style/Gotham_Medium"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:text="Email (Optional)"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_grey_stroke"
+                        android:inputType="textEmailAddress"
+                        android:minHeight="40dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
+                </android.support.design.widget.TextInputLayout>
+
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                    android:id="@+id/textView2"
+                    style="@style/Gotham_Medium"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="Mobile Number *"
+                    android:textColor="#000"
+                    android:textSize="15sp" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutMobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                        android:id="@+id/mobile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/bg_grey_stroke"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:minHeight="40dp"
+                        android:padding="10dp"
+                        android:textSize="16sp" />
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"></LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/submit"
+                    android:layout_width="fill_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/background"
+                    android:gravity="center">
+
+                    <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                        style="@style/Gotham_Medium"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Submit"
+                        android:textColor="#fff"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/otp_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
+                    android:id="@+id/enter_otp_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:padding="5dp"
+                    android:background="@drawable/bg_grey_stroke"
+                    android:inputType="number"
+                    android:maxLength="6" />
+
+                <Button
+                    android:id="@+id/submit_otp_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/background"
                     android:text="Submit"
-                    android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
-    <LinearLayout
-        android:id="@+id/otp_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="100dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
-            android:id="@+id/enter_otp_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/submit_otp_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/background"
-            android:text="Submit"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
-
 </android.support.design.widget.CoordinatorLayout>
 
