--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -60,6 +60,7 @@
                         android:background="@drawable/bg_grey_stroke"
                         android:layout_height="wrap_content"
                         android:minHeight="40dp"
+                        android:inputType="textCapWords"
                         android:padding="5dp"
                         android:textSize="16sp" />
 
