--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -82,12 +82,12 @@
             android:orientation="horizontal"
             android:visibility="gone">
 
-            <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+            <ListView
                 android:id="@+id/moreList"
                 android:text="@string/title_more"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:layout_height="match_parent"></com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView>
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
 
