--- a/app/src/main/res/layout/child_layout.xml
+++ b/app/src/main/res/layout/child_layout.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
         android:id="@+id/address"
         style="@style/Gotham_Book"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:text="address of mosque"
+        android:textColor="@color/black" />
+
+
+    <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+        android:id="@+id/distance"
+        style="@style/Gotham_Book"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="12dp"
         android:text="address of mosque"
         android:textColor="@color/black" />
