--- a/app/src/main/res/drawable/bg_grey_stroke.xml
+++ b/app/src/main/res/drawable/bg_grey_stroke.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#e2e2e2" />
+        android:color="@color/brown" />
 
 
 </shape>
