--- a/app/src/main/res/layout/activity_add_mosque.xml
+++ b/app/src/main/res/layout/activity_add_mosque.xml
@@ -1,10 +1,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE"
+    android:background="@color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".activity.SplashActivity">
@@ -16,29 +16,185 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="151dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/camraIcon"
-                    android:layout_width="100dp"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="90dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:background="@drawable/background_img"
-                    android:src="@drawable/camera" />
+                    android:layout_weight="1"
+                    android:background="@color/light_Green">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/bg_grey_stroke_3dp"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_1_layout"
+                            android:background="@drawable/background_img">
+
+                            <ImageView
+                                android:id="@+id/image1"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:src="@drawable/icon_add" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/light_Green">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/bg_grey_stroke_3dp"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_2_layout"
+                            android:background="@drawable/background_img">
+
+                            <ImageView
+
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:id="@+id/image2"
+                                android:src="@drawable/icon_add" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/light_Green">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/bg_grey_stroke"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_3_layout"
+                            android:background="@drawable/background_img">
+
+                            <ImageView
+
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/image3"
+                                android:layout_gravity="center"
+                                android:src="@drawable/icon_add" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/light_Green">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/bg_grey_stroke_3dp"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_4_layout"
+                            android:background="@drawable/background_img">
+
+                            <ImageView
+
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/image4"
+                                android:layout_gravity="center"
+                                android:src="@drawable/icon_add" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="90dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/light_Green">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="3dp"
+                        android:background="@drawable/bg_grey_stroke_3dp"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:id="@+id/image_5_layout"
+                            android:background="@drawable/background_img">
+
+                            <ImageView
+
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/image5"
+                                android:layout_gravity="center"
+                                android:src="@drawable/icon_add" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
 
             </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
                 android:orientation="vertical">
 
                 <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
@@ -57,10 +213,10 @@
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzEditText
                         android:id="@+id/mosque_name"
                         android:layout_width="match_parent"
-                        android:background="@drawable/bg_grey_stroke"
                         android:layout_height="wrap_content"
-                        android:minHeight="40dp"
+                        android:background="@drawable/bg_grey_stroke"
                         android:inputType="textCapWords"
+                        android:minHeight="40dp"
                         android:padding="5dp"
                         android:textSize="16sp" />
 
@@ -95,8 +251,6 @@
                     android:id="@+id/submitLayout"
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/background"
@@ -104,11 +258,11 @@
 
 
                     <com.example.shadabazamfarooqui.mylocator.utils.BuzzTextView
+                        android:id="@+id/clickCheck"
                         style="@style/Gotham_Book"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:id="@+id/clickCheck"
                         android:text="Submit"
                         android:textColor="#fff"
                         android:textSize="16sp" />
